@@ -24,7 +24,7 @@ Description: The RQuantLib package makes parts of QuantLib visible to the R
  Note that while RQuantLib's code is licensed under the GPL (v2 or later),
  QuantLib itself is released under a somewhat less restrictive Open Source
  license (see QuantLib-License.txt).
-Depends: R (>= 2.7.0), Rcpp (>= 0.8.2.3)
+Depends: R (>= 2.7.0), Rcpp (>= 0.8.2.4)
 LinkingTo: Rcpp
 SystemRequirements: QuantLib library (>= 0.9.9) from http://quantlib.org, 
  Boost library (>= 1.34.0) from http://www.boost.org
